# server/handler/comment_get_by_path.go
@@ -9,16 +9,16 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
-
-//	@Summary		获取所有评论
-//	@Description	获取所有评论
+//	@Summary		根据路径获取评论
+//	@Description	根据路径获取评论
 //	@Tags			评论
+//	@Params			path query string true "路径"
 //	@Success		200	{object}	common.Resp{data=[]entity.CookedComment}
 //	@Failure		500	{object}	common.Resp
-//	@Router			/api/comment/getAll [get]
-func CommentGetAll(router fiber.Router) {
-	router.Get("/getAll", func(c *fiber.Ctx) error {
-		rawData, err := query.Comment.Find()
+//	@Router			/api/comment/getByPath [get]
+func CommentGetByPath(router fiber.Router) {
+	router.Get("/getByPath", func(c *fiber.Ctx) error {
+		rawData, err := query.Comment.Where(query.Comment.Path.Eq(c.Query("path"))).Find()
 		if err != nil {
 			logger.Error("服务器内部错误: " + err.Error())
 			return common.RespServerError(c)
@@ -43,6 +43,6 @@ func CommentGetAll(router fiber.Router) {
 			}
 			data = append(data, *cookedComment)
 		}
-		return common.RespSuccess(c, "成功获取所有评论", data)
+		return common.RespSuccess(c, "成功获取评论", data)
 	})
 }
